src/components/mdTable/mdTable.scss
@import '../../core/stylesheets/variables.scss';

.md-table {
  display: flex;
  flex-flow: column wrap;
  overflow: auto;

  &.md-transition-off {
    tr,
    .md-checkbox .md-checkbox-container,
    .md-checkbox .md-checkbox-container:after {
      transition: none !important;
    }
  }

  table {
    width: 100%;
    border-spacing: 0;
    border-collapse: collapse;
  }

  tbody tr {
    border-top: 1px solid #e0e0e0;

    &.md-selected .md-table-cell {
      background-color: #f5f5f5;
    }

    &:hover .md-table-cell {
      background-color: #eee;
    }
  }

  .md-table-head {
    height: 56px;
    padding: 0;
    position: relative;
    overflow: hidden;
    color: rgba(#000, .54);
    font-size: 12px;
    line-height: 16px;
    text-align: left;
    text-overflow: ellipsis;
    white-space: nowrap;

    &:last-child .md-table-head-container {
      padding-right: 24px;
    }
  }

  .md-table-head-container {
    height: 100%;
    padding-right: 32px;
    padding-left: 24px;
    transition: $swift-ease-out;
    line-height: 56px;
  }

  .md-table-head-text {
    height: 28px;
    line-height: 28px;
  }

  .md-sortable {
    cursor: pointer;

    &:first-of-type {
      .md-icon {
        left: auto;
        right: 10px;
      }
    }

    &:hover,
    &.md-sorted {
      color: rgba(#000, .87);

      .md-icon {
        opacity: 1;
      }
    }

    &.md-sorted {
      .md-icon {
        color: rgba(#000, .87);
      }
    }

    &.md-sorted-descending {
      .md-icon {
        transform: translateY(-50%) rotate(180deg);
      }
    }

    .md-icon {
      $size: 16px;

      width: $size;
      min-width: $size;
      height: $size;
      min-height: $size;
      position: absolute;
      top: 50%;
      left: 2px;
      transition: $swift-ease-out;
      transform: translateY(-50%);
      opacity: 0;
      color: rgba(#000, .38);
      font-size: $size;
    }

    .md-ink-ripple {
      color: rgba(#000, .87);
    }
  }

  .md-table-cell {
    height: 48px;
    transition: $swift-ease-out;
    color: rgba(#000, .87);
    font-size: 13px;
    line-height: 18px;

    &:last-child .md-table-cell-container {
      padding-right: 24px;
    }

    .md-table-cell-container {
      padding: 0 32px 0 24px;
    }

    &.md-numeric {
      text-align: right;
    }
  }

  .md-table-selection {
    width: 60px;
    position: relative;
    vertical-align: middle;

    + {
      .md-table-cell .md-table-cell-container,
      .md-table-head .md-table-head-container {
        padding-left: 8px;
      }
    }

    .md-table-cell-container {
      padding-right: 16px;
      padding-left: 24px;
    }

    .md-checkbox {
      margin: 3px 0 0;
    }

    .md-checkbox-container {
      width: 18px;
      height: 18px;

      &:after {
        top: -1px;
        left: 4px
      }
    }
  }
}

.md-table-card {
  .md-toolbar {
    padding-left: 16px;
    background-color: #fff;
  }

  .md-title {
    flex: 1;
    font-size: 20px;
  }
}

